re-architect using frames -> things model, add personalization

--- a/env.example
+++ b/env.example
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CTF_ENVIRONMENT='your-space-environment'
 CONTENTFUL_PREVIEW_SECRET='a-preview-secret'
 NEXT_PUBLIC_CTF_STUDIO_EXPERIENCE_TYPE_ID="experiencePage"
 NEXT_PUBLIC_CTF_HOMEPAGE_SLUG="home"
+NEXT_PUBLIC_NINETAILED_CLIENT_ID=""
+NEXT_PUBLIC_NINETAILED_ENVIRONMENT="main"
