--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/experiences-sdk-react": "^3.6.2",
     "@contentful/live-preview": "^4.6.11",
     "@contentful/rich-text-react-renderer": "^16.0.1",
     "@contentful/rich-text-types": "^17.0.0",
     "@formatjs/intl-localematcher": "^0.6.0",
     "@hookform/resolvers": "^5.0.1",
+    "@ninetailed/experience.js-next": "^7.17.4",
+    "@ninetailed/experience.js-plugin-insights": "^7.17.4",
+    "@ninetailed/experience.js-plugin-preview": "^7.17.4",
+    "@ninetailed/experience.js-react": "^7.17.4",
+    "@ninetailed/experience.js-utils": "^7.17.4",
+    "@ninetailed/experience.js-utils-contentful": "^7.17.4",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -23,10 +30,11 @@
     "cf-emoji": "^1.0.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "contentful": "^11.5.7",
+    "contentful": "^11.7.19",
     "contentful-management": "^11.51.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.23.16",
     "lodash": "^4.17.21",
     "lucide-react": "^0.479.0",
     "negotiator": "^1.0.0",
